# Moonphase-View

./: GTKMoonPhaseView.sh  Makefile.am  README.md  autogen.sh  configure.ac  moonphaseview.sh.in
po/: POTFILES.in  de.po  moonphaseview.pot
src/: Makefile.am  julian.cpp  julian.h  main.cpp  moonphase.cpp  moonphase.h  moonphasewindow.cpp  moonphasewindow.h
